--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
- <ImageView
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:src="@drawable/computer"/>
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/computer"
+            android:layout_width="match_parent"
+            android:layout_height="381dp"
+            android:padding="5dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/computer4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
+
+            <ImageView
+                android:id="@+id/gk"
+                android:layout_width="355dp"
+                android:layout_height="210dp"
+                android:layout_weight="1"
+                android:scaleType="fitXY"
+                android:src="@drawable/gk4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/computer" />
+
+            <ImageView
+                android:id="@+id/sport"
+                android:layout_width="wrap_content"
+                android:layout_height="210dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:scaleType="fitXY"
+                android:src="@drawable/sport4" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/science"
+            android:layout_width="match_parent"
+            android:layout_height="381dp"
+            android:padding="5dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/science5" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
+
+            <ImageView
+                android:id="@+id/politics"
+                android:layout_width="355dp"
+                android:layout_height="210dp"
+                android:layout_weight="1"
+                android:scaleType="fitXY"
+                android:src="@drawable/politics"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/computer" />
+
+            <ImageView
+                android:id="@+id/geography"
+                android:layout_width="wrap_content"
+                android:layout_height="210dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:scaleType="fitXY"
+                android:src="@drawable/geography" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/got"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:padding="5dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/got2" />
+
+        <ImageView
+            android:id="@+id/harry"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/hp" />
 
 
+    </LinearLayout>
+</RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+
+</ScrollView>
